# mlwd-collecteor

./: CMakeLists.txt  README.md  chap3.md  chap6.md  optimized_table.tex  pyproject.toml  requirements.txt
cuda/: CMakeLists.txt  kernels.cu  kernels.cuh  stress_interface.cu
mlwd/: classifier.py  collect_ci.py  collect_nsys.py  collect_sensitivity.py  colocation.py  colocation_calibrate.py  compare.py  config.py  estimate_missing.py  extrapolate.py  interference.py  latex_table.py  merge.py  runner.py  stress.py  validate.py  visualize.py
output/: Llama-3.2-3B-full.json  Llama-3.2-3B.json  Qwen-2.5-7B-full.json  Qwen-2.5-7B.json  colocation_clean.json  colocation_llama.json  colocation_merged.json  colocation_qwen.json  interference_matrix.json  plot.ipynb  weights.json
output/interference_plots/: interference_matrix.json
scripts/: run_all.sh  run_colocation.sh  run_nsys_all.sh
